# lab_1

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
lab_1/: __init__.py  dataset.py  features.py  plots.py
lab_1/modeling/: predict.py  train.py
